--- a/ex5.html
+++ b/ex5.html
@@ -36,9 +36,11 @@
            
            function mOver(ele){
             ele.id = "square";
+            ele.style.paddingTop = "20px";
            }
            function mOut(ele){
             ele.id = "circle";
+            ele.style.paddingTop = "60px";
            }
         </script>
                 
